# matrix-webhook

./: .gitignore  .mergify.yml  .nixignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose-mattermost.yml  docker-compose.yml  flake.nix  main.py  matrix_webhook.py  pyproject.toml  setup.cfg  test.yml
.github/: dependabot.yml
.github/workflows/: docker-hub.yml  entrypoint.yml  lint.yml  nix.yml  publish.yml  pypi.yml  release.yml  test.yml
docs/: release.md  release.sh
matrix_webhook/: __main__.py  app.py  conf.py  formatters.py  handler.py  matrix.py  media.py  run.py  storage.py  utils.py  verify.py
middleware/: __init__.py  mattermost.py
tests/: .env  Dockerfile  __init__.py  example_discord.json  example_github_push.json  example_gitlab_gchat.json  example_gitlab_teams.json  example_grafana.json  example_grafana_9x.json  example_grn.json  homeserver.yaml  ratelimit.yaml  start.py  test_discord.py  test_github.py  test_gitlab_gchat.py  test_gitlab_teams.py  test_grafana.py  test_grafana_9x.py  test_grafana_forward.py  test_grn.py  test_image.py  tests.py  utils.py
