[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Post a message to a matrix room with a simple HTTP POST"
homepage = "https://github.com/nim65s/matrix-webhook"
license = "BSD-2-Clause"
name = "matrix-webhook"
readme = "README.md"
repository = "https://github.com/nim65s/matrix-webhook.git"
version = "3.9.1"

[tool.poetry.dependencies]
Markdown = "^3.7"
matrix-nio = "^0.24"
python = "^3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
httpx = ">=0.27.2"
ruff = ">=0.6.4"
safety = {allow-prereleases = true, version = "^3.2.7"}

[tool.poetry.scripts]
matrix-webhook = "matrix_webhook.__main__:main"

[tool.poetry.urls]
"changelog" = "https://github.com/nim65s/matrix-webhook/blob/master/CHANGELOG.md"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "COM", "D", "EM", "EXE", "G", "I", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
